# pfsspy

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITING.rst  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  asv.conf.json  codecov.yml  result.json  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/workflows/: python-lint.yml  python-package.yml  python-test.yml
benchmarks/: benchmarks.py
cartesian/: __init__.py  pfss_cartesian_obj.py  solve.py  utils.py
cartesian/tests/: test_mu_calc.py  test_pfss_cartesian.py
doc/: Makefile
doc/source/: changes.rst  conf.py  contributing.rst  helpers.rst  index.rst  installing.rst  numerical_method.rst  performance.rst  pfsspy.rst  project_status.rst  ref.rst  synoptic_fits.rst  tracing.rst  utils.rst
doc/source/manual/source/: numerical-methods.tex  refs.bib
examples/: README.txt  compute_pfss.py  gong_helpers.py  open_closed_map.py  plot_aia_overplotting.py  plot_dipole.py  plot_gong.py  plot_hmi.py  plot_open_closed_map.py  plot_tracer_performance.py  plot_tracers.py
examples/finding_data/: README.rst  adapt_MapSequence.py  adapt_helpers.py  adapt_map_sequence.py  plot_hmi.py  plot_mdi.py
examples/pfsspy_info/: README.rst  plot_computation_grid.py  tracer_performance.py
examples/testing/: README.rst  helpers.py  open_flux_harmonics.py  open_flux_nr.py  plot_error_map.py  plot_harmonic_comparison.py  plot_open_flux_harmonics.py  plot_open_flux_nr.py  plot_tracer_step_size.py  tracer_step_size.py  tracer_step_size_viz.py
examples/testing/results/: dphis_1-1.csv  dphis_11.csv  dphis_21.csv  dthetas_1-1.csv  dthetas_11.csv  dthetas_21.csv  open_flux_harmonics.json  open_flux_results.csv
examples/testing/results/flines/: dphis_1-1.csv  dphis_10.csv  dphis_11.csv  dphis_2-1.csv  dphis_2-2.csv  dphis_21.csv  dphis_22.csv  dphis_3-2.csv  dphis_3-3.csv  dphis_32.csv  dphis_33.csv  dthetas_1-1.csv  dthetas_10.csv  dthetas_11.csv  dthetas_2-1.csv  dthetas_2-2.csv  dthetas_21.csv  dthetas_22.csv  dthetas_3-2.csv  dthetas_3-3.csv  dthetas_32.csv  dthetas_33.csv
examples/using_pfsspy/: README.rst  expansion_factor_map.py  gong_helpers.py  open_closed_map.py  plot_aia_overplotting.py  plot_custom_source_surface.py  plot_cycle_simulation.py  plot_dipole.py  plot_field_line_magnetic_field.py  plot_gong.py  plot_hmi.py  plot_open_closed_map.py
examples/utils/: README.rst  plot_car_reproject.py
joss-paper/: paper.bib  paper.md
pfsspy/: __init__.py  _version.py  analytic.py  compute_pfss.py  coords.py  fieldline.py  grid.py  input.py  interpolator.py  map.py  output.py  output_netcdf.py  pfss.py  pfss_cartesian.py  plot.py  sample_data.py  tracing.py  utils.py
pfsspy/tests/: example_maps.py  test_analytic.py  test_coords.py  test_fieldline.py  test_map.py  test_pfss.py  test_tracers.py  test_utils.py
pfsspy/tests/data/: br_in.txt  br_out.txt
requirements/: base.txt  docs.txt  test.txt
