[metadata]
name = pfsspy
provides = pfsspy
description = "Potential field source surface modelling"
long_description = file: README.md
long_description_content_type = text/markdown
author = David Stansby
author_email = dstansby@gmail.com
license = GPLv3
license_file = LICENSE
url = https://pfsspy.readthedocs.io/en/stable/
edit_on_github = True
github_project = dstansby/pfsspy
platform = any
keywords = solar physics, solar, science, sun
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.7
packages = pfsspy
include_package_data = True
install_requires =
  astropy>=4.1
  numpy
  scikit-image
  scipy
  sunpy>=3

[options.extras_require]
docs =
  graphviz
  importlib_metadata
  pillow
  reproject
  sphinx>2
  sphinx-automodapi>=0.10
  sphinx-gallery
  sphinx_rtd_theme
  streamtracer
  sunpy[net,map]
  sympy

test =
  numpy
  pytest
  pytest-cov
  reproject
  streamtracer
  sympy

performance =
  numba
  streamtracer
analytic =
  sympy

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pfsspy/_version.py
versionfile_build = pfsspy/_version.py
tag_prefix = ''

[tool:pytest]
addopts = --cov=pfsspy/
filterwarnings =
    error
    # The following are a list of warnings to globally ignore
    # This is a common warning that can be safely ignored
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed, may indicate binary incompatibility:RuntimeWarning
    # TODO: fix these warnings and remove this filter
    ignore:Missing metadata for observer
    # See https://github.com/Cadair/parfive/issues/65
    ignore:unclosed <socket
    ignore:unclosed transport
    # See https://github.com/astropy/astropy/issues/11385
    ignore:'datfix' made the change
markers =
  remote_data

[isort]
balanced_wrapping = True
skip=versioneer.py,pfsspy/_version.py
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = pfsspy
length_sort = False
line_length = 80
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
