[metadata]
name = pfsspy
provides = pfsspy
description = "Potential field source surface modelling"
long_description = file: README.md
long_description_content_type = text/markdown
author = David Stansby
author_email = dstansby@gmail.com
license = GPLv3
url = https://pfsspy.readthedocs.io/en/stable/
edit_on_github = True
github_project = dstansby/pfsspy
platform = any
keywords = solar physics, solar, science, sun
classifiers =
  Development Status :: 6 - Mature
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.9
packages = pfsspy
include_package_data = True
install_requires =
  astropy>=5.0
  numpy
  scikit-image
  scipy
  sunpy[map]>=4

[options.extras_require]
docs =
  graphviz
  importlib_metadata
  pillow
  reproject
  sphinx>2,<7
  sphinx-automodapi>=0.10
  sphinx-gallery
  sphinx_rtd_theme
  streamtracer
  sunpy[net,map]
  sympy

test =
  numpy
  parfive
  pytest
  pytest-cov
  reproject
  streamtracer
  sympy

performance =
  numba
  streamtracer
analytic =
  sympy

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pfsspy/_version.py
versionfile_build = pfsspy/_version.py
tag_prefix = ''

[tool:pytest]
addopts = --cov=pfsspy/
filterwarnings =
    error
    # The following are a list of warnings to globally ignore
    # This is a common warning that can be safely ignored
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed, may indicate binary incompatibility:RuntimeWarning
    # TODO: fix these warnings and remove this filter
    ignore:Missing metadata for observer
    # See https://github.com/Cadair/parfive/issues/65
    ignore:unclosed <socket
    ignore:unclosed transport
    ignore:unclosed event loop
    # See https://github.com/astropy/astropy/issues/11385
    ignore:'datfix' made the change
    # Emitted by astropy
    ignore:The distutils package is deprecated
    # Emitted by numpy
    ignore:The distutils.sysconfig module is deprecated
markers =
  remote_data

[isort]
balanced_wrapping = True
skip=versioneer.py,pfsspy/_version.py
include_trailing_comma = True
known_helpers = helpers
length_sort = False
line_length = 80
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,HELPERS,LOCALFOLDER
